ensure we are using spacing units whenever possible for consistency

--- a/assets/less/global/base/code.less
+++ b/assets/less/global/base/code.less
@@ -19,7 +19,7 @@ code {
     font-size: 90%;
     white-space: nowrap;
     // ** Layout ** \\
-    padding: 2px 4px;
+    .padding(@eighth-spacing-unit, @quarter-spacing-unit);
 }
 
 /**
